Backend fixes + analytics working